--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,6 +26,7 @@ html {
   font-size: 17.5px;
   min-height: 100%;
   position: relative;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -371,7 +372,7 @@ table td {
   letter-spacing: 0.5px;
 }
 .post-content h1 {
-  margin-top: 40px;
+  margin-top: 40px;  
 }
 .post-content h2 {
   margin-top: 35px;
@@ -389,6 +390,46 @@ table td {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+hr {
+  max-width: 20em;
+}
+
+h1.main-page-name {
+  position: relative; 
+  transform: translate3d(0,-10px,0);
+  transition: all .15s ease-in-out;
+}
+h1.main-page-name:before, h1.main-page-name:after {
+  display: block;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+}
+h1.main-page-name:after {
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid rgba(0,0,0,.75); 
+  border-left: 6px solid transparent;
+  content: '';
+  height: 0;
+  top: 30em;
+  left: 10em;
+  width: 0;
+}
+h1.main-page-name:before {
+  background: rgba(0,0,0,.75);
+  border-radius: 5px;
+  color: #fff;
+  content: attr(data-title);
+  font-size: 14px;
+  padding: 6px 10px;
+  top: 1em;
+  white-space: nowrap;
+}
+h1.main-page-name:hover:after,
+h1.main-page-name:hover:before {
+  opacity: 1;
+  transform: translate3d(20em,2em,0);
 }
 
 /* LIST */
